# Robotics-task2

task2/: CMakeLists.txt  package.xml
task2/src/: draw_circle_node.py  subscribe_cmd_vel_node.py
