<?xml version="1.0"?>
<package format="2">
  <name>my_turtle_controller</name>
  <version>0.0.0</version>
  <description>The my_turtle_controller package</description>

  <maintainer email="ffathy2004@gmail.com">TDX</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlesim</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
</package>
